--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "version": "0.0.1",
   "description": "Yandex.Praktikum canonical projects",
   "scripts": {
-    "hint": "htmlhint ./public/index.html",
-    "deploy": "gh-pages -d public"
+    "hint": "htmlhint src/index.html",
+    "deploy": "gh-pages -d public",
+    "build": "rm -rf dist && webpack",
+    "dev": "webpack-dev-server --open --watch"
   },
   "repository": {
     "type": "git",
@@ -20,5 +22,22 @@
   "dependencies": {
     "gh-pages": "^2.2.0",
     "htmlhint": "^0.11.0"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.10.2",
+    "@babel/preset-env": "^7.10.2",
+    "autoprefixer": "^9.8.0",
+    "babel-loader": "^8.1.0",
+    "css-loader": "^3.5.3",
+    "cssnano": "^4.1.10",
+    "file-loader": "^6.0.0",
+    "html-loader": "^1.1.0",
+    "html-webpack-plugin": "^4.3.0",
+    "mini-css-extract-plugin": "^0.9.0",
+    "path": "^0.12.7",
+    "postcss-loader": "^3.0.0",
+    "webpack": "^4.43.0",
+    "webpack-cli": "^3.3.11",
+    "webpack-dev-server": "^3.11.0"
   }
 }
