--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "description": "Yandex.Praktikum canonical projects",
   "scripts": {
     "hint": "htmlhint src/index.html",
-    "deploy": "gh-pages -d public",
+    "deploy": "gh-pages -d dist",
     "build": "rm -rf dist && webpack",
     "dev": "webpack-dev-server --open --watch"
   },
